--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body {
     background-color: #6677AA;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
 }
+section {
+    margin-top: 10%;
 h1  {
     text-align: center;
     letter-spacing: 0.5rem;
