--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ section {
     margin-left: 5%;
     margin-right:5%;
     margin-top: 10%;
+}
 h1  {
     text-align: center;
     letter-spacing: 0.5rem;
